# developing-by-ai

./: WORKSPACE  package-lock.json  package.json
.github/workflows/: main.yml
docs/: blueprint.md
gemini-chat-cli/: README.md  go.mod  main.go
src/app/: BUILD.bazel  globals.css  layout.tsx  page.tsx
src/app/(auth)/: layout.tsx
src/app/(auth)/login/: page.tsx
src/app/(auth)/register/: page.tsx
src/app/banks/: page.tsx
src/app/banks/register/: page.tsx
src/app/bills/: page.tsx
src/app/cards/: page.tsx
src/app/cards/register/: page.tsx
src/app/dashboard/: page.tsx
src/app/profile/: page.tsx
src/app/transactions/record/: page.tsx
src/components/: BUILD.bazel
src/components/bills/: bills-table.tsx
src/components/dashboard/: expense-breakdown-chart.tsx  income-expense-chart.tsx  networth-chart.tsx
src/components/forms/: goals-profile-form.tsx  login-form.tsx  personal-profile-form.tsx  professional-profile-form.tsx  record-transaction-form.tsx  register-bank-form.tsx  register-card-form.tsx  register-form.tsx
src/components/shared/: page-header.tsx
src/lib/: BUILD.bazel  constants.ts  types.ts
src/lib/actions/: auth.actions.ts  bank.actions.ts  card.actions.ts  profile.actions.ts  transaction.actions.ts
src/lib/firebase/: config.ts
